SUBDIRS = x86

AM_CFLAGS = -g -I$(top_srcdir)/inc -I$(top_srcdir)/src/inc -Wall -Werror

# headers to include when installing
pkginclude_HEADERS =

# Libraries to build
noinst_LTLIBRARIES = libocr_sync.la

# files part of the library
libocr_sync_la_SOURCES = ocr-sync.c


MAINTAINERCLEANFILES = Makefile.in
